--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -1,8 +1,8 @@
 name: CI Pipeline
 # This Pipeline tests source code for:
 # - Compilation (if it is compiling with no warnings or errors)
+# - Unitary tests (if the library works as intended, compared to its STL counterpart).
 # - Memory error detection (detecting memory errors such as memory leaks, invalid memory accesses, and uses of uninitialized memory)
-# - Unitary tests (if the library works as intended, compared to std::containers).
 
 on:
   pull_request:
@@ -19,10 +19,10 @@ jobs:
       uses: actions/checkout@v3
     
     - name: compilation check
-      run: make
+      run: make build
+
+    - name: unit tests check
+      run: make tests
 
     - name: memory error detection
       run: make valgrind
-
-#     - name: unit tests check
-#       run: make tests
