--- a/ITERATORS_CARAI/GNUmakefile
+++ b/ITERATORS_CARAI/GNUmakefile
@@ -1,2 +1,4 @@
-all:
+all: testinho.out
+
+testinho.out:
 	clear && c++ -Wall -Wextra -Werror -std=c++98 -g testinho.cpp -o testinho.out && valgrind --quiet --tool=memcheck --show-leak-kinds=all --leak-check=full --track-origins=yes --show-reachable=yes --undef-value-errors=yes ./testinho.out
