when kindling become flames 🔥🔥

--- a/ITERATORS_CARAI/GNUmakefile
+++ b/ITERATORS_CARAI/GNUmakefile
@@ -1,11 +1,15 @@
-all: testinho.out
-	./testinho.out
+NAME = map_test.out
 
-testinho.out: testinho.cpp
-	clear && c++ -Wall -Wextra -Werror -std=c++98 -g testinho.cpp -o testinho.out
+SOURCE = main.cpp
 
-vaval: testinho.out
-	valgrind --quiet --tool=memcheck --show-leak-kinds=all --leak-check=full --track-origins=yes --show-reachable=yes --undef-value-errors=yes ./testinho.out
+all: $(NAME)
+	./$(NAME)
+
+vaval: $(NAME)
+	valgrind --quiet --tool=memcheck --show-leak-kinds=all --leak-check=full --track-origins=yes --show-reachable=yes --undef-value-errors=yes ./$(NAME)
+
+$(NAME): $(SOURCE) ft_map.hpp
+	clear && c++ -Wall -Wextra -Werror -std=c++98 -g $(SOURCE) -o $(NAME)
 
 fclean:
-	rm testinho.out
+	rm $(NAME)
