--- a/ITERATORS_CARAI/GNUmakefile
+++ b/ITERATORS_CARAI/GNUmakefile
@@ -8,7 +8,7 @@ all: $(NAME)
 vaval: $(NAME)
 	valgrind --quiet --tool=memcheck --show-leak-kinds=all --leak-check=full --track-origins=yes --show-reachable=yes --undef-value-errors=yes ./$(NAME)
 
-$(NAME): $(SOURCE) ft_map.hpp
+$(NAME): $(SOURCE) ft_map.hpp ft_map.tpp
 	clear && c++ -Wall -Wextra -Werror -std=c++98 -g $(SOURCE) -o $(NAME)
 
 fclean:
